Added submodule to perform NW sequence alignments and to merge paired-end reads"

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "tuba_seq/PEAR"]
     path = PEAR
     url = https://github.com/frederic-mahe/PEAR.git
+[submodule "seq-align"]
+	path = seq-align
+	url = https://github.com/noporpoise/seq-align
+[submodule "PEAR"]
+	path = PEAR
+	url = https://github.com/frederic-mahe/PEAR
