Developed a new parallel version of preprocess.py that has better memory managment and can parallelize processing of a single fastq file also added some other features and performance enhancements. Also removed some of the output files of example scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ###############
 old/*
 build/*
+examples/unaligned
+examples/preprocessed
+examples/training
+examples/mutations
 
 # Extras #
 ##########
