Fixed a bug in fastq_map_sum

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 ###############
 old/*
 build/*
-examples/unaligned
-examples/preprocessed
-examples/training
-examples/mutations
+examples/unaligned/*
+examples/preprocessed/*
+examples/training/*
+examples/mutations/*
 
 # Extras #
 ##########
