--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "seq-align"]
-	path = seq-align
-	url = https://github.com/noporpoise/seq-align
+#[submodule "seq-align"]
+#	path = seq-align
+#	url = https://github.com/noporpoise/seq-align
